--- a/CLS Student Bowl Practice/MainWindow.xaml
+++ b/CLS Student Bowl Practice/MainWindow.xaml
@@ -8,13 +8,12 @@
         Title="ASCLS - WI Student Bowl" Height="500" Width="750"
         Loaded="mainWindow_onLoad">
     <Grid x:Name="gridMainWindow">
-        <Label x:Name="lblASCLS" Content="ASCLS - WI" HorizontalAlignment="Left" Margin="320,80,0,0" VerticalAlignment="Top" FontSize="24"/>
-        <Label x:Name="lblStudentBowl" Content="Student Bowl" HorizontalAlignment="Left" Margin="309,127,0,0" VerticalAlignment="Top" FontSize="24"/>
-        <ComboBox x:Name="cmbYear" HorizontalAlignment="Left" Margin="319,246,0,0" VerticalAlignment="Top" Width="166" SelectionChanged="cmbYear_SelectionChanged"/>
-        <Label x:Name="lblYear" Content="Select Year:" HorizontalAlignment="Left" Margin="155,237,0,0" VerticalAlignment="Top" FontSize="16"/>
-        <Label x:Name="lblQuestionType" Content="Select Question Type:" HorizontalAlignment="Left" Margin="86,312,0,0" VerticalAlignment="Top" FontSize="16"/>
-        <Button x:Name="btnMLS" Content="MLS" HorizontalAlignment="Left" Margin="304,319,0,0" VerticalAlignment="Top" Width="75" Click="btnMLS_Click"/>
-        <Button x:Name="btnMLT" Content="MLT" HorizontalAlignment="Left" Margin="423,319,0,0" VerticalAlignment="Top" Width="75" Click="btnMLT_Click"/>
-
+        <Label x:Name="lblASCLS" Content="ASCLS - WI" HorizontalAlignment="Stretch" Margin="318,80,208,0" VerticalAlignment="Top" FontSize="24" Grid.Column="1" Height="42"/>
+        <Label x:Name="lblStudentBowl" Content="Student Bowl" HorizontalAlignment="Stretch" Margin="307,127,208,0" VerticalAlignment="Top" FontSize="24" Grid.Column="1" Height="42"/>
+        <ComboBox x:Name="cmbYear" HorizontalAlignment="Stretch" Margin="343,246,233,0" VerticalAlignment="Top" SelectionChanged="cmbYear_SelectionChanged" Grid.Column="1" Height="22"/>
+        <Label x:Name="lblYear" Content="Select Year:" Margin="155,237,472,0" VerticalAlignment="Top" FontSize="16" Grid.Column="1" Height="31"/>
+        <Label x:Name="lblQuestionType" Content="Select Question Type:" HorizontalAlignment="Stretch" Margin="86,312,472,0" VerticalAlignment="Top" FontSize="16" Grid.Column="1" Height="31"/>
+        <Button x:Name="btnMLS" Content="MLS" HorizontalAlignment="Stretch" Margin="345,319,322,0" VerticalAlignment="Top" Click="btnMLS_Click" Grid.Column="1" Height="20"/>
+        <Button x:Name="btnMLT" Content="MLT" HorizontalAlignment="Stretch" Margin="440,319,227,0" VerticalAlignment="Top" Click="btnMLT_Click" Grid.Column="1" Height="20"/>
     </Grid>
 </Window>
