--- a/CLS Student Bowl Practice/QuestionSelect.xaml
+++ b/CLS Student Bowl Practice/QuestionSelect.xaml
@@ -10,7 +10,7 @@
         <Label x:Name="lblTimeRemaining" Content="Time Remaining" HorizontalAlignment="Left" Margin="609,10,0,0" VerticalAlignment="Top" FontSize="16"/>
         <TextBlock x:Name="tbTimeLeft" HorizontalAlignment="Left" Margin="618,46,0,0" TextWrapping="Wrap" Text="30:00" VerticalAlignment="Top" Width="95" FontSize="16"/>
         <Label x:Name="lbl5" Content="5" HorizontalAlignment="Left" Margin="152,96,0,0" VerticalAlignment="Top" FontSize="16"/>
-        <Button x:Name="btnBlood5" Content="Blood Bank" HorizontalAlignment="Left" Margin="81,132,0,0" VerticalAlignment="Top" Width="157" FontSize="16"/>
+        <!--<Button x:Name="btnBlood5" Content="Blood Bank" HorizontalAlignment="Left" Margin="81,132,0,0" VerticalAlignment="Top" Width="157" FontSize="16"/>
         <Button x:Name="btnBody5" Content="Body Fluids" HorizontalAlignment="Left" Margin="81,162,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnBodyFluids5_Click"/>
         <Button x:Name="btnChemisty5" Content="Chemistry" HorizontalAlignment="Left" Margin="81,192,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="button_Click"/>
         <Button x:Name="btnCoagulation5" Content="Coagulation" HorizontalAlignment="Left" Margin="81,222,0,0" VerticalAlignment="Top" Width="157" FontSize="16"/>
@@ -26,16 +26,16 @@
         <Button x:Name="btnHematology10" Content="Hematology" HorizontalAlignment="Left" Margin="290,252,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnHematology5_Click"/>
         <Button x:Name="btnImmunology10" Content="Immunology" HorizontalAlignment="Left" Margin="290,282,0,0" VerticalAlignment="Top" Width="157" FontSize="16"/>
         <Button x:Name="btnLab10" Content="Lab Operations" HorizontalAlignment="Left" Margin="290,312,0,0" VerticalAlignment="Top" Width="157" FontSize="16"/>
-        <Button x:Name="btnMicro10" Content="Micro/Parasit/Mycol" HorizontalAlignment="Left" Margin="290,342,0,0" VerticalAlignment="Top" Width="157" FontSize="16"/>
+        <Button x:Name="btnMicro10" Content="Micro/Parasit/Mycol" HorizontalAlignment="Left" Margin="290,342,0,0" VerticalAlignment="Top" Width="157" FontSize="16"/>-->
         <Label x:Name="lbl20" Content="20" HorizontalAlignment="Left" Margin="565,96,0,0" VerticalAlignment="Top" FontSize="16"/>
-        <Button x:Name="btnBlood20" Content="Blood Bank" HorizontalAlignment="Left" Margin="498,132,0,0" VerticalAlignment="Top" Width="157" FontSize="16"/>
+        <!--<Button x:Name="btnBlood20" Content="Blood Bank" HorizontalAlignment="Left" Margin="498,132,0,0" VerticalAlignment="Top" Width="157" FontSize="16"/>
         <Button x:Name="btnBody20" Content="Body Fluids" HorizontalAlignment="Left" Margin="498,162,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnBodyFluids5_Click"/>
         <Button x:Name="btnChemisty20" Content="Chemistry" HorizontalAlignment="Left" Margin="498,192,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="button_Click"/>
         <Button x:Name="btnCoagulation20" Content="Coagulation" HorizontalAlignment="Left" Margin="498,222,0,0" VerticalAlignment="Top" Width="157" FontSize="16"/>
         <Button x:Name="btnHematology20" Content="Hematology" HorizontalAlignment="Left" Margin="498,252,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnHematology5_Click"/>
         <Button x:Name="btnImmunology20" Content="Immunology" HorizontalAlignment="Left" Margin="498,282,0,0" VerticalAlignment="Top" Width="157" FontSize="16"/>
         <Button x:Name="btnLab20" Content="Lab Operations" HorizontalAlignment="Left" Margin="498,312,0,0" VerticalAlignment="Top" Width="157" FontSize="16"/>
-        <Button x:Name="btnMicro20" Content="Micro/Parasit/Mycol" HorizontalAlignment="Left" Margin="498,342,0,0" VerticalAlignment="Top" Width="157" FontSize="16"/>
+        <Button x:Name="btnMicro20" Content="Micro/Parasit/Mycol" HorizontalAlignment="Left" Margin="498,342,0,0" VerticalAlignment="Top" Width="157" FontSize="16"/>-->
         <Label x:Name="lblScore" Content="Score:" HorizontalAlignment="Left" Margin="196,412,0,0" VerticalAlignment="Top" FontSize="16"/>
         <Label x:Name="lblTeamA" Content="Team A" HorizontalAlignment="Left" Margin="254,412,0,0" VerticalAlignment="Top" FontSize="16"/>
         <TextBox x:Name="txtScoreA" HorizontalAlignment="Left" Height="23" Margin="324,416,0,0" TextWrapping="Wrap" Text="888" VerticalAlignment="Top" Width="35" FontSize="16"/>
