--- a/CLS Student Bowl Practice/QuestionSelect.xaml
+++ b/CLS Student Bowl Practice/QuestionSelect.xaml
@@ -6,45 +6,46 @@
         xmlns:local="clr-namespace:CLS_Student_Bowl_Practice"
         mc:Ignorable="d"
         Title="QuestionSelect" Height="500" Width="750"
-        Loaded="questionSelect_onLoad">
-    <Grid>
-        <Label x:Name="lblTimeRemaining" Content="Time Remaining" HorizontalAlignment="Left" Margin="609,10,0,0" VerticalAlignment="Top" FontSize="16"/>
-        <TextBlock x:Name="tbTimeLeft" HorizontalAlignment="Left" Margin="618,46,0,0" TextWrapping="Wrap" Text="30:00" VerticalAlignment="Top" Width="95" FontSize="16"/>
-        <Label x:Name="lbl5" Content="5" HorizontalAlignment="Left" Margin="152,96,0,0" VerticalAlignment="Top" FontSize="16"/>
-        <Button x:Name="btnBlood5" Content="Blood Bank" HorizontalAlignment="Left" Margin="81,132,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnBlood5_Click"/>
-        <Button x:Name="btnBody5" Content="Body Fluids" HorizontalAlignment="Left" Margin="81,162,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnBodyFluids5_Click"/>
-        <Button x:Name="btnChemisty5" Content="Chemistry" HorizontalAlignment="Left" Margin="81,192,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnChemistry5_Click"/>
-        <Button x:Name="btnCoagulation5" Content="Coagulation" HorizontalAlignment="Left" Margin="81,222,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnCoagulation5_Click"/>
-        <Button x:Name="btnHematology5" Content="Hematology" HorizontalAlignment="Left" Margin="81,252,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnHematology5_Click"/>
-        <Button x:Name="btnImmunology5" Content="Immunology" HorizontalAlignment="Left" Margin="81,282,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnImmunology5_Click"/>
-        <Button x:Name="btnLab5" Content="Lab Operations" HorizontalAlignment="Left" Margin="81,312,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnLab5_Click"/>
-        <Button x:Name="btnMicro5" Content="Micro/Parasit/Mycol" HorizontalAlignment="Left" Margin="81,342,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnMicro5_Click"/>
-        <Label x:Name="lbl10" Content="10" HorizontalAlignment="Left" Margin="357,96,0,0" VerticalAlignment="Top" FontSize="16"/>
-        <Button x:Name="btnBlood10" Content="Blood Bank" HorizontalAlignment="Left" Margin="290,132,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnBlood10_Click"/>
-        <Button x:Name="btnBody10" Content="Body Fluids" HorizontalAlignment="Left" Margin="290,162,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnBodyFluids10_Click"/>
-        <Button x:Name="btnChemisty10" Content="Chemistry" HorizontalAlignment="Left" Margin="290,192,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnChemisty10_Click" />
-        <Button x:Name="btnCoagulation10" Content="Coagulation" HorizontalAlignment="Left" Margin="290,222,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnCoagulation10_Click"/>
-        <Button x:Name="btnHematology10" Content="Hematology" HorizontalAlignment="Left" Margin="290,252,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnHematology10_Click"/>
-        <Button x:Name="btnImmunology10" Content="Immunology" HorizontalAlignment="Left" Margin="290,282,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnImmunology10_Click"/>
-        <Button x:Name="btnLab10" Content="Lab Operations" HorizontalAlignment="Left" Margin="290,312,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnLab10_Click"/>
-        <Button x:Name="btnMicro10" Content="Micro/Parasit/Mycol" HorizontalAlignment="Left" Margin="290,342,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnMicro10_Click"/>
-        <Label x:Name="lbl20" Content="20" HorizontalAlignment="Left" Margin="565,96,0,0" VerticalAlignment="Top" FontSize="16"/>
-        <Button x:Name="btnBlood20" Content="Blood Bank" HorizontalAlignment="Left" Margin="498,132,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnBlood20_Click"/>
-        <Button x:Name="btnBody20" Content="Body Fluids" HorizontalAlignment="Left" Margin="498,162,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnBody20_Click"/>
-        <Button x:Name="btnChemisty20" Content="Chemistry" HorizontalAlignment="Left" Margin="498,192,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnChemisty20_Click" />
-        <Button x:Name="btnCoagulation20" Content="Coagulation" HorizontalAlignment="Left" Margin="498,222,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnCoagulation20_Click"/>
-        <Button x:Name="btnHematology20" Content="Hematology" HorizontalAlignment="Left" Margin="498,252,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnHematology20_Click" />
-        <Button x:Name="btnImmunology20" Content="Immunology" HorizontalAlignment="Left" Margin="498,282,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnImmunology20_Click"/>
-        <Button x:Name="btnLab20" Content="Lab Operations" HorizontalAlignment="Left" Margin="498,312,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnLab20_Click"/>
-        <Button x:Name="btnMicro20" Content="Micro/Parasit/Mycol" HorizontalAlignment="Left" Margin="498,342,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnMicro20_Click"/>
-        <Label x:Name="lblScore" Content="Score:" HorizontalAlignment="Left" Margin="196,412,0,0" VerticalAlignment="Top" FontSize="16"/>
-        <Label x:Name="lblTeamA" Content="Team A" HorizontalAlignment="Left" Margin="254,412,0,0" VerticalAlignment="Top" FontSize="16"/>
-        <TextBox x:Name="txtScoreA" HorizontalAlignment="Left" Height="23" Margin="324,416,0,0" TextWrapping="Wrap" Text="888" VerticalAlignment="Top" Width="35" FontSize="16"/>
-        <Label x:Name="lblTeamB" Content="Team B" HorizontalAlignment="Left" Margin="372,412,0,0" VerticalAlignment="Top" FontSize="16"/>
-        <TextBox x:Name="txtScoreB" HorizontalAlignment="Left" Height="23" Margin="442,416,0,0" TextWrapping="Wrap" Text="888" VerticalAlignment="Top" Width="35" FontSize="16"/>
-        <Button x:Name="btnEnd" Content="End Game" HorizontalAlignment="Left" Margin="647,434,0,0" VerticalAlignment="Top" Width="85" FontSize="16"/>
-        <Label x:Name="lblType" Content="###" HorizontalAlignment="Left" Margin="299,32,0,0" VerticalAlignment="Top" FontSize="24"/>
-        <Label x:Name="lblYear" Content="Year #" HorizontalAlignment="Left" Margin="384,32,0,0" VerticalAlignment="Top" FontSize="24"/>
-
-    </Grid>
+        Loaded="questionSelect_onLoad" >
+    <Viewbox Margin="0,0,2,10" >
+        <Grid>
+            <Label x:Name="lblTimeRemaining" Content="Time Remaining" HorizontalAlignment="Left" Margin="609,10,0,0" VerticalAlignment="Top" FontSize="16"/>
+            <TextBlock x:Name="tbTimeLeft" HorizontalAlignment="Left" Margin="618,46,0,0" TextWrapping="Wrap" Text="30:00" VerticalAlignment="Top" Width="95" FontSize="16"/>
+            <Label x:Name="lbl5" Content="5" HorizontalAlignment="Left" Margin="152,96,0,0" VerticalAlignment="Top" FontSize="16"/>
+            <Button x:Name="btnBlood5" Content="Blood Bank" HorizontalAlignment="Left" Margin="81,132,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnBlood5_Click"/>
+            <Button x:Name="btnBody5" Content="Body Fluids" HorizontalAlignment="Left" Margin="81,162,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnBodyFluids5_Click"/>
+            <Button x:Name="btnChemisty5" Content="Chemistry" HorizontalAlignment="Left" Margin="81,192,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnChemistry5_Click"/>
+            <Button x:Name="btnCoagulation5" Content="Coagulation" HorizontalAlignment="Left" Margin="81,222,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnCoagulation5_Click"/>
+            <Button x:Name="btnHematology5" Content="Hematology" HorizontalAlignment="Left" Margin="81,252,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnHematology5_Click"/>
+            <Button x:Name="btnImmunology5" Content="Immunology" HorizontalAlignment="Left" Margin="81,282,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnImmunology5_Click"/>
+            <Button x:Name="btnLab5" Content="Lab Operations" HorizontalAlignment="Left" Margin="81,312,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnLab5_Click"/>
+            <Button x:Name="btnMicro5" Content="Micro/Parasit/Mycol" HorizontalAlignment="Left" Margin="81,342,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnMicro5_Click"/>
+            <Label x:Name="lbl10" Content="10" HorizontalAlignment="Left" Margin="357,96,0,0" VerticalAlignment="Top" FontSize="16"/>
+            <Button x:Name="btnBlood10" Content="Blood Bank" HorizontalAlignment="Left" Margin="290,132,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnBlood10_Click"/>
+            <Button x:Name="btnBody10" Content="Body Fluids" HorizontalAlignment="Left" Margin="290,162,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnBodyFluids10_Click"/>
+            <Button x:Name="btnChemisty10" Content="Chemistry" HorizontalAlignment="Left" Margin="290,192,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnChemisty10_Click" />
+            <Button x:Name="btnCoagulation10" Content="Coagulation" HorizontalAlignment="Left" Margin="290,222,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnCoagulation10_Click"/>
+            <Button x:Name="btnHematology10" Content="Hematology" HorizontalAlignment="Left" Margin="290,252,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnHematology10_Click"/>
+            <Button x:Name="btnImmunology10" Content="Immunology" HorizontalAlignment="Left" Margin="290,282,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnImmunology10_Click"/>
+            <Button x:Name="btnLab10" Content="Lab Operations" HorizontalAlignment="Left" Margin="290,312,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnLab10_Click"/>
+            <Button x:Name="btnMicro10" Content="Micro/Parasit/Mycol" HorizontalAlignment="Left" Margin="290,342,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnMicro10_Click"/>
+            <Label x:Name="lbl20" Content="20" HorizontalAlignment="Left" Margin="565,96,0,0" VerticalAlignment="Top" FontSize="16"/>
+            <Button x:Name="btnBlood20" Content="Blood Bank" HorizontalAlignment="Left" Margin="498,132,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnBlood20_Click"/>
+            <Button x:Name="btnBody20" Content="Body Fluids" HorizontalAlignment="Left" Margin="498,162,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnBody20_Click"/>
+            <Button x:Name="btnChemisty20" Content="Chemistry" HorizontalAlignment="Left" Margin="498,192,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnChemisty20_Click" />
+            <Button x:Name="btnCoagulation20" Content="Coagulation" HorizontalAlignment="Left" Margin="498,222,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnCoagulation20_Click"/>
+            <Button x:Name="btnHematology20" Content="Hematology" HorizontalAlignment="Left" Margin="498,252,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnHematology20_Click" />
+            <Button x:Name="btnImmunology20" Content="Immunology" HorizontalAlignment="Left" Margin="498,282,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnImmunology20_Click"/>
+            <Button x:Name="btnLab20" Content="Lab Operations" HorizontalAlignment="Left" Margin="498,312,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnLab20_Click"/>
+            <Button x:Name="btnMicro20" Content="Micro/Parasit/Mycol" HorizontalAlignment="Left" Margin="498,342,0,0" VerticalAlignment="Top" Width="157" FontSize="16" Click="btnMicro20_Click"/>
+            <Label x:Name="lblScore" Content="Score:" HorizontalAlignment="Left" Margin="196,412,0,0" VerticalAlignment="Top" FontSize="16"/>
+            <Label x:Name="lblTeamA" Content="Team A" HorizontalAlignment="Left" Margin="254,412,0,0" VerticalAlignment="Top" FontSize="16"/>
+            <TextBox x:Name="txtScoreA" HorizontalAlignment="Left" Height="23" Margin="324,416,0,0" TextWrapping="Wrap" Text="888" VerticalAlignment="Top" Width="35" FontSize="16"/>
+            <Label x:Name="lblTeamB" Content="Team B" HorizontalAlignment="Left" Margin="372,412,0,0" VerticalAlignment="Top" FontSize="16"/>
+            <TextBox x:Name="txtScoreB" HorizontalAlignment="Left" Height="23" Margin="442,416,0,0" TextWrapping="Wrap" Text="888" VerticalAlignment="Top" Width="35" FontSize="16"/>
+            <Button x:Name="btnEnd" Content="End Game" HorizontalAlignment="Left" Margin="647,434,0,0" VerticalAlignment="Top" Width="85" FontSize="16"/>
+            <Label x:Name="lblType" Content="###" HorizontalAlignment="Left" Margin="299,32,0,0" VerticalAlignment="Top" FontSize="24"/>
+            <Label x:Name="lblYear" Content="Year #" HorizontalAlignment="Left" Margin="384,32,0,0" VerticalAlignment="Top" FontSize="24"/>
+        </Grid>
+    </Viewbox>
 </Window>
